# power_ranger

./: .gitignore  CMakeLists.txt  README.md  maketests.sh
config/: data.jsonc  routerType.csv  trafficType.csv
src/: algorithms.c  algorithms.h  commons.h  data.c  data.h  main.c  output.c  output.h  simulation.c  simulation.h
test/: AllTests.c  CuTestTest.c
tests/: minunit.h  test.c
